# erouska-webapp

./: .dockerignore  .gitignore  Dockerfile  README.md  azure-pipelines.yml  compile.sh  envs_local.sh  install_local.fish  install_local.sh  requirements.txt  setup.cfg  setup.py  setup_local.sh  start_local.sh
.github/workflows/: pythonpackage.yml
helm-chart/: Chart.yaml  clusterissuer.yaml  configSecret.template.yaml  setdns.sh  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-chart/templates/tests/: test-connection.yaml
src/backend/: main.py  run.sh
src/backend/alembic/versions/: b265126ed1ed_.py
src/backend/app/: tracing.py
src/backend/app/api/: endpoints.py  frontend.py  healthcheck.py
src/backend/app/db/: database.py  session.py  utils.py
src/backend/app/models/: user.py
src/btwa/: __main__.py  config.conf  web.py
src/btwa/static/: index.html
src/btwa_api/: __main__.py  config.conf  main.py  run.sh  scripts.py  web.py
src/btwa_api/alembic/: env.py
src/btwa_api/alembic/versions/: 707d23bce7d3_.py  e26d54fdde5b_.py  fa5b83755fb2_.py
src/btwa_api/app/: config.py  detection.py  security.py  utils.py
src/btwa_api/app/api/: endpoints.py  frontend.py  healthcheck.py  utils.py
src/btwa_api/app/db/: base.py  base_class.py  database.py  firebase.py  session.py  utils.py
src/btwa_api/app/models/: handler.py  user.py
src/btwa_frontend/: CONFIG.json  MIME_MAP.json  package-lock.json  package.json  rollup.config.js
src/btwa_frontend/public/: global.css  index.html  range.css  table.css
src/btwa_frontend/public/res/: global.css  range.css  table.css
src/btwa_frontend/src/: App.svelte  Contacts.svelte  Dropzone.svelte  store.js
src/btwa_frontend/src/components/: Duration.svelte  (+2 more)
src/client/: CONFIG.json  README.md  index.js  package.json
src/client/public/: fakePhones.json  global.css  index.html
src/client/src/: Contacts.svelte  store.js
testdata/: usertable.xls
tests/: detection_test.py  test_detection_pytest.py  test_utils_pytest.py
(+12 files in other folders)
