[metadata]
name =  bluetooth-tracking-wa
version =  0.0.1
description = Service for storing and serving heatmap
long_description = file: README.md

author = Jan Kolena
author_email = jendakolena@gmail.com

license = MIT
classifiers =
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.7

package_dir=
    =src

# List packages explicitly when using namespace packages:
packages=
    btwa
    btwa.static

install_requires =
    aiohttp >=3.5.4, <4.0.0
    statsd >=3.3.0, <3.4.0
    pyhocon >=0.3.54, <0.4.0
    setuptools >= 0.40

tests_require =
    pytest >=5.0, <6.0
    pytest-cov >=2.7, <3.0

[options.packages.find]
where=src

[options.package_data]
* = *.conf, *.json, *.js, *.html, *.png

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
