[metadata]
name =  bluetooth-tracing-web-app
version =  0.0.1
description =
long_description = file: README.md

author = Jan Kolena
author_email = jendakolena@gmail.com

license = MIT
classifiers =
    Programming Language :: Python :: 3.6

[options]
python_requires = >= 3.6

package_dir=
    =src

# List packages explicitly when using namespace packages:
packages=
    btwa_api
    btwa_api.app
    btwa_api.app.api
    btwa_api.app.db
    btwa_api.app.models
    btwa_api.alembic
    btwa_frontend.public
    btwa_frontend.public.res
    btwa_frontend.public.res.build

install_requires =
    statsd >= 3.3.0, <3.4.0
    sentry-sdk >= 0.14.2, < 0.15.0
    aiocontextvars >= 0.1.2, < 0.2.0
    aiohttp >= 3.5.4, <4.0.0
    pyhocon >= 0.3.54, <0.4.0
    setuptools >= 0.40
    fastapi >= 0.52
    aiofiles >= 0.4
    uvicorn >= 0.11
    alembic >= 1.1
    sqlalchemy >= 1.3.15
    psycopg2-binary >= 2.8
    bcrypt >= 3.1
    pyodbc >= 4.0

tests_require =
    pytest >=5.0, <6.0
    pytest-cov >=2.7, <3.0

[options.packages.find]
where=src

[options.package_data]
* = *.conf, *.json, *.js, *.css, *.html, *.png, *.svg

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
